Clipping fix for mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,3 +15,22 @@
   }
 }
 
+#animated {
+  background: rgba(255,255,255,0);
+  border-style: none;
+  margin-top: 0px;
+  width: 50%;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Alata, sans-serif;
+  padding-top: 100px;
+  padding-right: 400px;
+  padding-left: 0px;
+}
+
+@media (max-width: 500px) {
+  #animated {
+    padding-right: 200px;
+  }
+}
+
